--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <title>小兔鲜儿 - 新鲜 惠民 快捷！</title>
-    <link rel="shortcut icon" href="http://erabbit.itheima.net/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 </head>
 <link rel="stylesheet" href="./css/base.css">
 <link rel="stylesheet" href="./css/common.css">
