--- a/tets.html
+++ b/tets.html
@@ -9,8 +9,11 @@
 </head>
 
 <body>
-    <div>
-        测试1651
+    <div data-id="123"></div>
 </body>
+<script>
+    const div = document.querySelector('div')
+    console.log(div.dataset)
+</script>
 
 </html>
