--- a/index.html
+++ b/index.html
@@ -1081,7 +1081,7 @@
             </div>
 
             <!-- 新鲜好物 -->
-            <div class="home-new">
+            <div class="home-new panel">
                 <div class="home-panel">
                     <div class="container">
                         <div class="head">
@@ -1141,7 +1141,7 @@
             </div>
 
             <!-- 人气推荐 -->
-            <div class="home-popular">
+            <div class="home-popular panel">
                 <div class="home-panel">
                     <div class="container">
                         <div class="head">
@@ -2096,7 +2096,7 @@
 
 
             <!-- 最新专题 -->
-            <div class="home-topic xtx_pane1" style="height: 495px;">
+            <div class="home-topic pane1" style="height: 495px;">
                 <div class="containere">
                     <div class="head">
                         <h3 class="xinxian">
