--- a/index.html
+++ b/index.html
@@ -2096,7 +2096,7 @@
 
 
             <!-- 最新专题 -->
-            <div class="home-topic pane1" style="height: 495px;">
+            <div class="home-topic pane1" style="height: 495px; background: #f5f5f5;">
                 <div class="containere">
                     <div class="head">
                         <h3 class="xinxian">
