--- a/index.html
+++ b/index.html
@@ -1194,7 +1194,7 @@
             </div>
 
             <!-- 热门品牌 -->
-            <div class="home-banner panel">
+            <div class="home-bannerr panel">
                 <div class="container">
                     <div class="head">
                         <h3 class="xinxian">热门品牌<span class="chulu">国际经典 品质保证</span>
@@ -2320,7 +2320,7 @@
                     <ul class="xtx-elevator-list">
                         <li><a href="javascript:;" data-name="new">新鲜好物</a></li>
                         <li><a href="javascript:;" data-name="popular">人气推荐</a></li>
-                        <li><a href="javascript:;" data-name="banner">热门品牌</a></li>
+                        <li><a href="javascript:;" data-name="bannerr">热门品牌</a></li>
                         <li><a href="javascript:;" data-name="topic">最新专题</a></li>
                         <li><a href="javascript:;" id="backTop"><i class="sprites"> 〉</i>顶部</a></li>
                     </ul>
