--- a/Order.html
+++ b/Order.html
@@ -860,37 +860,7 @@
 
                             <!-- 底部轮播图 -->
                             <div class="xtx-carousel">
-                                <ul class="carousel-body">
-                                    <li class="carousel-item">
-                                        <div class="slider">
-                                            <a href="http://erabbit.itheima.net/#/product/4004328">
-                                                <img src="https://yanxuan-item.nosdn.127.net/7170d6147878a099914b7bb7ce21773f.png"
-                                                    alt="#">
-                                                <p class="name ellipsis">儿童多色圆领印花短袖T恤110-160cm</p>
-                                                <p class="price">¥59.00</p>
-                                            </a>
-                                            <a href="http://erabbit.itheima.net/#/product/4004328">
-                                                <img src="https://yanxuan-item.nosdn.127.net/6d8d6772df51fa60c2e899a16ac34718.png"
-                                                    alt="#">
-                                                <p class="name ellipsis">儿童多色圆领印花短袖T恤110-160cm</p>
-                                                <p class="price">¥59.00</p>
-                                            </a>
-                                            <a href="http://erabbit.itheima.net/#/product/4004328">
-                                                <img src="https://yanxuan-item.nosdn.127.net/ea1ec719c9a860eedb0cb7ef31ada4af.png"
-                                                    alt="#">
-                                                <p class="name ellipsis">儿童多色圆领印花短袖T恤110-160cm</p>
-                                                <p class="price">¥59.00</p>
-                                            </a>
-                                            <a href="http://erabbit.itheima.net/#/product/4004328">
-                                                <img src="https://yanxuan-item.nosdn.127.net/c3b4e3640f77bb72ec4d043ef2e2a0cd.png"
-                                                    alt="#">
-                                                <p class="name ellipsis">儿童多色圆领印花短袖T恤110-160cm</p>
-                                                <p class="price">¥59.00</p>
-                                            </a>
-                                        </div>
-                                    </li>
-
-                                </ul>
+                                <ul class="carousel-body"></ul>
                                 <a href="javascript:;" class="carousel-btn prev">
                                     <i class="iconfont icon-angle-left">
 
