--- a/login.html
+++ b/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="./css/login.css">
     <link rel="shortcut icon" href="http://erabbit.itheima.net/favicon.ico" type="image/x-icon">
 </head>
+
 <body>
     <div id="app">
         <!-- 头部 -->
@@ -29,10 +31,14 @@
         <!-- 中间-登录、注册 -->
         <div class="login-section">
             <div class="wrapper">
-                <nav>
-                    <a href="javascript:;" class="active account-btn">账户登录</a>
-                    <a href="javascript:;" class="active scan-btn">扫码登录</a>
-                </nav>
+                <form action autocomplete="off">
+                    <div class="box">
+                        <div class="nav">
+                            <a href="javascript:;" class="active account-btn">账户登录</a>
+                            <a href="javascript:;" class="scan-btn ">扫码登录</a>
+                        </div>
+                    </div>
+                </form>
 
                 <div class="qrcode-box" style="display: none;"> <!-- 用 js 修改 display 的值就行 -->
                     <img src="http://erabbit.itheima.net/img/qrcode.5372a064.jpg" alt="">
@@ -41,7 +47,7 @@
                         登录
                     </p>
                 </div>
-                
+
 
                 <div class="account-box">
                     <div class="toggle">
@@ -125,6 +131,5 @@
     </div>
 </body>
 <!-- 引入 js 文件 -->
-<script src="../rabbit-site/js/index.js"></script>
 <script src="./js/login.js"></script>
 </html>
