--- a/login.html
+++ b/login.html
@@ -62,7 +62,7 @@
                         <div class="form-item">
                             <div class="input">
                                 <i class="iconfont icon-user"></i>
-                                <input class="user-input" modelvalue="xiaotuxian001" type="text"  placeholder="请输入用户名" name="account" id="uname" onblur="checkId">
+                                <input class="user-input" modelvalue="xiaotuxian001" type="text"  placeholder="请输入用户名" name="account" id="uname">
                             </div>
                             <div class="error pwd-warn">
                                 <i class="iconfont icon-warning"></i>
@@ -73,7 +73,7 @@
                         <div class="form-item">
                             <div class="input">
                                 <i class="iconfont icon-lock"></i>
-                                <input class="user-input" modelvalue="xiaotuxian001" type="password"  placeholder="请输入密码" name="account" id="password" onblur="checkId">
+                                <input class="user-input" modelvalue="xiaotuxian001" type="password" placeholder="请输入密码" name="account" id="password" autocomplete="current-password">
                             </div>
                             <div class="error pwd-warn">
                                 <i class="iconfont icon-warning"></i>
