--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="container">
                 <ul>
                     <li><a href="./login.html">请先登录</a><span>|</span></li>
-                    <li><a href="./login.html">免费注册</a><span>|</span></li>
+                    <li><a href="./register.html">免费注册</a><span>|</span></li>
                     <li><a href="./Order.html">我的订单</a><span>|</span></li>
                     <li><a href="#">会员中心</a><span>|</span></li>
                     <li><a href="#">帮助中心</a><span>|</span></li>
