--- a/login.html
+++ b/login.html
@@ -74,7 +74,8 @@
                         <div class="form-item">
                             <div class="input">
                                 <i class="iconfont icon-lock"></i>
-                                <input class="user-input" modelvalue="xiaotuxian001" type="password" placeholder="请输入密码" name="account" id="password" autocomplete="current-password">
+                                <input class="user-input" modelvalue="xiaotuxian001" type="password" placeholder="请输入密码" name="password" id="password" autocomplete="current-password">
+                                <span class="code">发送验证码</span>
                                 <span class="toggle-password" onclick="togglePasswordVisibility()">
                                     <img src="https://my.ruanmei.com/user-login/images/eye-close.svg"alt="Toggle Password Visibility">
                                 </span>
