--- a/Order.html
+++ b/Order.html
@@ -746,10 +746,10 @@
                         <div class="home-overview">
                             <div class="user-meta">
                                 <div class="avatar">
-                                    <img src="http://yjy-xiaotuxian-dev.oss-cn-beijing.aliyuncs.com/avatar/2022-05-14/f6bafcfc-a840-4a81-9907-939ee56dff4d.jpg"
+                                    <img src="https://i.postimg.cc/8zHDNCB1/1691165638269.png"
                                         alt="#">
                                 </div>
-                                <h4>QQ</h4>
+                                <h4>Seasir</h4>
                             </div>
                             <div class="item">
                                 <a href="javascript:;"><span class="iconfont icon-hy"></span>
@@ -875,11 +875,10 @@
 
                             <!-- 小圆点 -->
                             <div class="carousel-indicator">
-                                <span class="active"></span>
-                                <span></span>
-                                <span></span>
-                                <span></span>
-
+                                <span class="active" data-index="0"></span>
+                                <span data-index="1"></span>
+                                <span data-index="2"></span>
+                                <span data-index="3"></span>
                             </div>
 
                         </div>
