--- a/Order.html
+++ b/Order.html
@@ -22,11 +22,11 @@
                     <li class="user"><a href="./login.html">请先登录</a><span>|</span></li>
                     <li><a href="./login.html">免费注册</a><span>|</span></li>
                     <li><a href="./Order.html">我的订单</a><span>|</span></li>
-                    <li><a href="#">会员中心</a><span>|</span></li>
-                    <li><a href="#">帮助中心</a><span>|</span></li>
-                    <li><a href="#">关于我们</a><span>|</span></li>
+                    <li><a href="javascript:;">会员中心</a><span>|</span></li>
+                    <li><a href="javascript:;">帮助中心</a><span>|</span></li>
+                    <li><a href="javascript:;">关于我们</a><span>|</span></li>
                     <li>
-                        <a href="#">
+                        <a href="javascript:;">
                             <i class="iconfont icon-phone">
                             </i>
                             手机版
@@ -746,8 +746,7 @@
                         <div class="home-overview">
                             <div class="user-meta">
                                 <div class="avatar">
-                                    <img src="https://i.postimg.cc/8zHDNCB1/1691165638269.png"
-                                        alt="#">
+                                    <img src="https://i.postimg.cc/8zHDNCB1/1691165638269.png" alt="#">
                                 </div>
                                 <h4>Seasir</h4>
                             </div>
@@ -890,12 +889,12 @@
                         <div class="xtx-tabs">
                             <nav>
                                 <a class="active" href="javascript:;">全部订单</a>
-                                <a href="#">待付款</a>
-                                <a href="#">待发货</a>
-                                <a href="#">待收货</a>
-                                <a href="#">待评价</a>
-                                <a href="#">已完成</a>
-                                <a href="#">已取消</a>
+                                <a href="javascript:;">待付款</a>
+                                <a href="javascript:;">待发货</a>
+                                <a href="javascript:;">待收货</a>
+                                <a href="javascript:;">待评价</a>
+                                <a href="javascript:;">已完成</a>
+                                <a href="javascript:;">已取消</a>
                             </nav>
 
                         </div>
