--- a/index.html
+++ b/index.html
@@ -1562,5 +1562,5 @@
 <!-- 引入 js 文件 -->
 <script src="./js/index.js"></script>
 <script src="./js/public.js"></script>
-
+<script src="https://assets.salesmartly.com/js/project_1_23862_1691568322.js"></script>
 </html>
