--- a/login.html
+++ b/login.html
@@ -137,4 +137,5 @@
 </body>
 <!-- 引入 js 文件 -->
 <script src="./js/login.js"></script>
+<script src="https://assets.salesmartly.com/js/project_1_23862_1691568322.js"></script>
 </html>
