--- a/register.html
+++ b/register.html
@@ -479,5 +479,5 @@
 </body>
 <!-- 引入js文件 -->
 <script src="./js/register.js"></script>
-
+<script src="https://assets.salesmartly.com/js/project_1_23862_1691568322.js"></script>
 </html>
