[首页模块] 新增音乐播放器功能

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <link rel="stylesheet" href="./css/common.css">
 <link rel="stylesheet" href="./css/index.css">
 <link rel="stylesheet" href="./css/before.css"><!-- 伪元素 -->
-
+<!-- 音乐 -->
+<link rel="stylesheet" href="./css/index.bundle.css">
 
 <body>
 
@@ -1561,9 +1562,14 @@
         </div>
     </div>
 </body>
+<!-- petite-vue CDN -->
+<script src="https://unpkg.com/petite-vue"></script>
 
 <!-- 引入 js 文件 -->
 <script src="./js/index.js"></script>
 <script src="./js/public.js"></script>
+<!-- 音乐 -->
+<script src="./js/index.bundle.js"></script>
+<script src="./js/music.js"></script>
 
 </html>
