--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link rel="stylesheet" href="./css/index.css">
 <link rel="stylesheet" href="./css/before.css"><!-- 伪元素 -->
 <!-- 音乐 -->
-<link rel="stylesheet" href="./css/index.bundle.css">
+<link rel="stylesheet" href="./css/music.css">
 
 <body>
 
